Your commit message

--- a/site/contact/index.html
+++ b/site/contact/index.html
@@ -445,7 +445,7 @@
 <ul>
 <li>Email: <a href="mailto:nay.thuta.sg@gmail.com">nay.thuta.sg@gmail.com</a></li>
 <li>Phone: <a href="+65-8423-3073">+65-8423-3073</a></li>
-<li>LinkedIn: <a href="linkedin.com/in/naythuta444">linkedin.com/in/naythuta444</a></li>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/naythuta444">linkedin.com/in/naythuta444</a></li>
 </ul>
 
 
